# zpsu_mon

./: CMakeLists.txt  Kconfig  README.md  pico2_display_pack.overlay  pico2_display_pack2.overlay  pico_display_pack.overlay  pico_display_pack2.overlay  prj.conf  zephyr.patch
.github/workflows/: firmware.yml
boards/: rpi_pico.overlay
boards/common/: pico_display_pack2_lcd.dtsi  pico_display_pack_buttons.dtsi  pico_display_pack_lcd.dtsi  pico_display_pack_leds.dtsi  pico_display_pack_lvgl_input.dtsi  pico_display_pack_pwm_config.dtsi
boards/rpi_pico/: pico_display_pack.overlay  pico_display_pack2.overlay
boards/rpi_pico2/: pico_display_pack.overlay  pico_display_pack2.overlay
src/: button_assignments.h  button_handler.c  button_handler.h  display_control.c  display_control.h  led.c  main.c  main.cpp  psu_ctrl.c  psu_ctrl.h  watchface_app.c  watchface_app.h
src/events/: psuctrl_event.h
src/font/: DSEG7Classic_Bold_16.c  DSEG7Classic_Bold_36.c
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_font_DSEG7ClassicBold36.c  ui_helpers.c  ui_helpers.h  watchface_ui.c  watchface_ui.h
src/ui/screens/: ui_Screen1.c  ui_Screen1.h
ui/: SquareLine_Project.sll  SquareLine_Project.spj
ui/assets/fonts-DSEG_v050b1/DSEG7-Classic/: ui_font_DSEG7ClassicBold36.c  ui_font_DSEG7ClassicBold36.fcfg
